ui/index.css
.navbar {
	background: white;
}

.group {
	/*background: yellow;*/
	/*width: 400px;
	padding-left: 30px;*/
	/*height: 1000px;*/
}

/*
.group .subgroup {
	width: 500px;
	height: 200px;
}
*/
.fixed {
	position: fixed;
}

/* sidebar */
.bs-docs-sidebar {
	padding-left: 20px;
	margin-top: 20px;
	margin-bottom: 20px;
}

/* all links */
.bs-docs-sidebar .nav>li>a {
	color: #999;
	border-left: 2px solid transparent;
	padding: 4px 20px;
	font-size: 13px;
	font-weight: 400;
}

/* nested links */
.bs-docs-sidebar .nav .nav>li>a {
	padding-top: 1px;
	padding-bottom: 1px;
	padding-left: 30px;
	font-size: 12px;
}

/* active & hover links */
.bs-docs-sidebar .nav>.active>a,
.bs-docs-sidebar .nav>li>a:hover,
.bs-docs-sidebar .nav>li>a:focus {
	color: #563d7c;
	text-decoration: none;
	background-color: transparent;
	/*border-left-color: #563d7c;*/
}
/* all active links */
.bs-docs-sidebar .nav>.active>a,
.bs-docs-sidebar .nav>.active:hover>a,
.bs-docs-sidebar .nav>.active:focus>a {
	font-weight: 700;
}
/* nested active links */
.bs-docs-sidebar .nav .nav>.active>a,
.bs-docs-sidebar .nav .nav>.active:hover>a,
.bs-docs-sidebar .nav .nav>.active:focus>a {
	font-weight: 500;
}

/* hide inactive nested list */
.bs-docs-sidebar .nav ul.nav {
	display: none;
}
/* show active nested list */
.bs-docs-sidebar .nav>.active>ul.nav {
	display: block;
}

/*Header formatting */
.MainContent {
	margin-top: 50px;
}
.group, .subgroup {
	padding-top: 50px;
	margin-top: -50px;
}

#templateButton {
	margin-bottom: 5px;
}

